--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ header {
     justify-content: center;
     height: 100vmax;
 }
+header p {
+    text-align: center;
+}
 .button-header-container {
     display: flex;
     flex-direction: column;
@@ -25,11 +28,6 @@ header {
 .title h1{
     margin: 30px 0;
     text-align: center;
-}
-.title h2 {
-    font-size: 15px;
-    text-align: center;
-    margin: 10px 0 20px 0;
 }
 
 .photo-of-me img {
@@ -110,6 +108,11 @@ hr {
         background-size: cover;
         text-shadow: black 5px 5px 5px;
     }
+    header p {
+        font-size: 40px;
+        font-family: 'Sacramento', cursive, sans-serif;
+    }
+
     .title {
         border: white 1px solid;
         width: fit-content;
