--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
   padding: 30px 0;
   font-family: 'Ubuntu', sans-serif;
   transition: all 0.3s ease;
+  z-index: 998;
 }
 
 .navbar.sticky {
@@ -67,6 +68,13 @@
   color: #fff;
 }
 
+/* menu btn styling */
+.menu-btn {
+  color: #fff;
+  cursor: pointer;
+  display: none;
+}
+
 /* home section stiling */
 .home{
   display: flex;
@@ -100,4 +108,236 @@
   color: crimson;
   font-weight: 500;
   
+}
+
+.home .home-content a {
+  display: inline-block;
+  color: crimson;
+  background: none;
+  font-size: 25px;
+  padding: 12px 36px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid crimson;
+  transition: all 0.3s ease;
+}
+
+.home .home-content a:hover {
+  color: #fff;
+  background: crimson;
+}
+
+/* about section */
+section {
+  padding: 100px 0;
+}
+.about {
+  font-family: 'Poppins', sans-serif;
+}
+
+.about .title {
+  position: relative;
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 60px;
+  padding-bottom: 20px;
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.about .title::before {
+  content: '';
+  position: absolute;
+  width: 180px;
+  height: 3px;
+  background: #111;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%)
+}
+.about .title::after {
+  content: 'Who I am';
+  position: absolute;
+  bottom: -12px;
+  left: 50%;
+  font-size: 20px;
+  color: crimson;
+  padding: 5px;
+  background: #fff;
+  transform: translateX(-50%)
+}
+
+.about .about-content {
+  display: flex;
+
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.about .about-content .left {
+  width: 45%;
+}
+
+.about .about-content .left img{
+  height: 400px;
+  width: 400px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+
+.about .about-content .right {
+  width: 55%;
+}
+
+.about .about-content .right .text {
+  font-size: 25px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.about .about-content .right .text span {
+  color: crimson
+}
+
+.about .about-content .right p {
+  text-align: justify;
+}
+
+.about .about-content .right a {
+  display: inline-block;
+  color: #fff;
+  background: crimson;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid crimson;
+  transition: all 0.3s ease;
+}
+
+.about .about-content .right a:hover {
+  background: none;
+  color: crimson;
+}
+
+
+/* responsive media query start */
+@media (max-width:1300px){
+  .home .max-width {
+    margin-left: 0;
+  }
+}
+
+@media (max-width:1104px){
+  .about .about-content .left img{
+    height: 350px;
+    width: 350px;
+    object-fit: cover;
+    border-radius: 6px;
+  }
+}
+
+@media (max-width:991px){
+  .max-width {
+    padding: 0 50px;
+  }
+}
+
+@media (max-width:947px){
+  .menu-btn {
+    display: block;
+    z-index: 999;
+  }
+
+  .menu-btn i.active:before {
+    content: '\f00d'
+  }
+  
+  .navbar .menu {
+    position: fixed;
+    background: #111;
+    height: 100vh;
+    width: 100%;
+    left: -100%;
+    top:0;
+    text-align: center;
+    padding-top: 80px;
+    transition: all 0.3s ease;
+  }
+
+  .navbar .menu.active {
+    left: 0
+  }
+  .navbar .menu li {
+    display: block;
+  }
+  .navbar .menu li a {
+    display: inline-block;
+    margin: 20px;
+    font-size: 25px;
+  }
+
+  .home .home-content .text-2 {
+    font-size: 70px;
+  }
+  
+  .home .home-content .text-3 {
+    font-size: 35px;
+  }
+  .home .home-content a {
+    font-size: 23px;
+    padding: 10px 30px;
+  }
+
+  .max-width {
+    max-width: 800px;
+  }
+
+  .about .about-content .column {
+    width: 100%;
+  }
+
+  .about .about-content .left {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto 60px;
+  }
+
+  .about .about-content .right {
+    flex: 100%;
+  }
+}
+
+@media (max-width:690px){
+  .max-width {
+    padding: 0 23px;
+  }
+
+  .home .home-content .text-2 {
+    font-size: 60px;
+  }
+  
+  .home .home-content .text-3 {
+    font-size: 32px;
+  }
+  .home .home-content a {
+    font-size: 20px;
+    padding: 8px 20px;
+  }
+}
+
+@media (max-width:500px){
+  .max-width {
+    padding: 0 23px;
+  }
+
+  .home .home-content .text-2 {
+    font-size: 50px;
+  }
+  
+  .home .home-content .text-3 {
+    font-size: 27px;
+  }
 }
