--- a/style.css
+++ b/style.css
@@ -131,30 +131,7 @@
 section {
   padding: 100px 0;
 }
-.about {
-  font-family: 'Poppins', sans-serif;
-}
 
-.about .title {
-  position: relative;
-  font-size: 40px;
-  font-weight: 500;
-  margin-bottom: 60px;
-  padding-bottom: 20px;
-  text-align: center;
-  font-family: 'Ubuntu', sans-serif;
-}
-
-.about .title::before {
-  content: '';
-  position: absolute;
-  width: 180px;
-  height: 3px;
-  background: #111;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%)
-}
 .about .title::after {
   content: 'Who I am';
   position: absolute;
@@ -167,9 +144,9 @@ section {
   transform: translateX(-50%)
 }
 
-.about .about-content {
+.about .about-content,
+.skills .skills-content {
   display: flex;
-
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
@@ -221,6 +198,165 @@ section {
   background: none;
   color: crimson;
 }
+
+/* all similar content  */
+.about, .skills, .projects {
+  font-family: 'Poppins', sans-serif;
+}
+
+
+section .title {
+  position: relative;
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 60px;
+  padding-bottom: 20px;
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+section .title::before {
+  content: '';
+  position: absolute;
+  width: 180px;
+  height: 3px;
+  background: #111;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%)
+}
+
+section .title::after {
+  position: absolute;
+  bottom: -12px;
+  left: 50%;
+  font-size: 20px;
+  color: crimson;
+  padding: 5px;
+  background: #fff;
+  transform: translateX(-50%)
+}
+
+/* skills section styling */
+.skills .title:after {
+  content: 'what i know'
+}
+
+.skills .skills-content .column {
+  width: calc(50% - 30px);
+}
+
+.skills .skills-content .left .text {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.skills .skills-content .left p {
+  text-align: justify;
+}
+
+.skills .skills-content .left a {
+  display: inline-block;
+  color: #fff;
+  background: crimson;
+  font-size: 18pz;
+  font-weight: 500;
+  padding: 8px 16px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid crimson;
+  transition: all 0.3s ease;
+}
+
+.skills .skills-content .right .bars {
+  margin-bottom: 15px;
+}
+
+.skills .skills-content .right .info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+
+.skills .skills-content .right span {
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.skills .skills-content .line {
+  height: 5px;
+  width: 100%;
+  background: lightgray;
+  position: relative;
+}
+
+.skills .skills-content .line:before {
+  content:'';
+  position: absolute;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: crimson;
+}
+
+.skills .skills-content .html:before{
+  width: 90%;
+}
+.skills .skills-content .css:before{
+  width: 60%;
+}
+.skills .skills-content .javascript:before{
+  width: 75%;
+}
+.skills .skills-content .react:before{
+  width: 80%;
+}
+.skills .skills-content .git:before{
+  width: 70%;
+}
+
+/* project section styling */
+.projects .title:after {
+  background: #111;
+  content:"What I learn"
+}
+.projects {
+  color: #fff;
+  background: #111;
+}
+
+.projects .title:before {
+  background: #fff;
+}
+
+.projects .carousel .card {
+  background: #222;
+  border-radius: 6px;
+  padding: 25px 35px;
+}
+
+.projects .carousel .card .box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.projects .carousel .card .box {
+  font-size: 25px;
+  font-weight: 500;
+  margin: 10px 0 7px;
+}
+
+.projects .carousel .card img{
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border: 5px solid crimson;
+}
+
 
 
 /* responsive media query start */
@@ -308,6 +444,11 @@ section {
   .about .about-content .right {
     flex: 100%;
   }
+
+  .skills .skills-content .column{
+    width: 100%;
+    margin-bottom: 25px;
+  } 
 }
 
 @media (max-width:690px){
@@ -326,6 +467,7 @@ section {
     font-size: 20px;
     padding: 8px 20px;
   }
+
 }
 
 @media (max-width:500px){
